# holz_python_logger

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
holz_python_logger/: __init__.py  logger.py  settings.py
